--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,21 +2,29 @@ body {
   background-color: black;
   text-align: center;
   font-family: Verdana;
-  color: white;
 }
 h1 {
-  font-weight: Normal;
+  font-weight: normal;
   font-size:50px;
+  color: white;
 }
 h2 {
   font-weight: 300;
   font-size: 42px;
-}
-a {
-color: Aquamarine !important;
+  color:white;
 }
 
-p {
-  color: gray;
+#link{
+  color: aquamarine;
   font-size: 16px
+}
+p {
+  font-size: 21px;
+  color:gray;
+}
+a{
+  color: aquamarine;
+}
+#end {
+  text-align: right;
 }
